# cargo-unmaintained

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
assets/elaborate/: clippy.toml
ci/: Cargo.toml  supply_chain.json
ci/src/: lib.rs
ci/tests/: ci.rs
ei/: Cargo.toml
ei/tests/: dogfood.rs  rustsec_advisories.rs  rustsec_advisories.stdout  rustsec_issues.rs  rustsec_issues.stdout  save_token.rs  snapbox.rs  snapbox_real_github.rs
ei/tests/cases/: cargo.stdout  cargo.toml  hyperfine.stdout  old-repository-non-member.stderr  pretty_yaml.toml  taplo.stdout  timeout.toml
examples/: rustsec_advisories.rs
examples/rustsec_issues/: main.rs  octocrab_util.rs
examples/rustsec_util/: maybe_to_string.rs  mod.rs
fixtures/archived/: Cargo.toml
fixtures/icu-rename/: Cargo.toml
fixtures/icu-rename/after/: Cargo.toml
fixtures/icu-rename/after/src/: lib.rs
fixtures/icu-rename/before/: Cargo.toml
fixtures/icu-rename/before/src/: lib.rs
fixtures/icu-rename/src/: lib.rs
fixtures/mercurial/: Cargo.toml
fixtures/old-repository-archived/: Cargo.toml
fixtures/old-repository-non-member/: Cargo.toml
fixtures/private-registry/: Cargo.toml
fixtures/private-registry/.cargo/: config.toml
fixtures/private-registry/crates-io/: Cargo.toml
fixtures/private-registry/my-registry/: Cargo.toml
fixtures/timeout/: Cargo.toml
fixtures/timeout/timeout/: Cargo.toml
fixtures/workspace/: Cargo.toml
fixtures/workspace/unmaintained/: Cargo.toml
gix-transport/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
gix-transport/src/: lib.rs
gix-transport/src/client/: capabilities.rs  mod.rs  non_io_types.rs  traits.rs
gix-transport/src/client/async_io/: bufread_ext.rs  connect.rs  request.rs  traits.rs
gix-transport/src/client/blocking_io/: bufread_ext.rs  connect.rs  file.rs  request.rs  traits.rs
gix-transport/src/client/blocking_io/http/: mod.rs  traits.rs
gix-transport/src/client/blocking_io/http/curl/: mod.rs  remote.rs
gix-transport/src/client/blocking_io/http/reqwest/: mod.rs  remote.rs
gix-transport/src/client/blocking_io/ssh/: mod.rs  program_kind.rs  tests.rs
gix-transport/src/client/git/: async_io.rs  blocking_io.rs  mod.rs
mock_github/: Cargo.toml
mock_github/src/: main.rs
rustsec_advisory_comparison/: Cargo.toml
rustsec_advisory_comparison/src/: main.rs
rustsec_comparison/: Cargo.toml
rustsec_comparison/src/: main.rs
rustsec_util/: Cargo.toml
rustsec_util/src/: lib.rs
scripts/: ellipsify_snapbox_stdouts.sh
src/: curl.rs  flock.rs  flush.rs  github.rs  lib.rs  main.rs  on_disk_cache.rs  opts.rs  packaging.rs  progress.rs  repo_status.rs  repository_cache.rs  serialize.rs  url.rs  verbose.rs
src/github/: mock.rs  mod.rs  util.rs
src/github/real/: map_ext.rs  mod.rs  util.rs
testing/: Cargo.toml
testing/src/: lib.rs  snapbox.rs
tests/: ci.rs  clippy.rs  dogfood.rs  ei.rs  ignore.rs  ignored.rs  integration.rs  markdown_link_check.json  no_cache.rs  purge.rs  renamed_packages.rs  rustsec_advisories.rs  rustsec_advisories.stdout  rustsec_advisories.with_token.stdout  rustsec_advisories.without_token.stdout  rustsec_advisory_comparison.rs  rustsec_comparison.rs  rustsec_comparison.stdout  rustsec_comparison.with_token.stdout  rustsec_comparison.without_token.stdout  rustsec_issues.rs  rustsec_issues.stdout  rustsec_issues.with_token.stdout  rustsec_issues.without_token.stdout  save_token.rs  snapbox.rs  util.rs
tests/cases/: atty.toml  atty_all_targets.json  atty_all_targets.stderr  atty_all_targets.toml  cargo.json  cargo.stderr  cargo.stdout  cargo.toml  cargo.url  cargo.with_token.stdout  cargo.without_token.stderr  cargo.without_token.stdout  hyperfine.json  hyperfine.stderr  hyperfine.stdout  hyperfine.toml  hyperfine.url  hyperfine.with_token.stdout  hyperfine.without_token.stderr  hyperfine.without_token.stdout  mercurial.json  mercurial.stderr  mercurial.toml  old-repository-archived.stderr  old-repository-archived.toml  old-repository-non-member.stderr  old-repository-non-member.toml  pretty_yaml.json  pretty_yaml.stderr  private-registry.json  private-registry.stderr  private-registry.stdout  private-registry.toml  taplo.json  taplo.stderr  taplo.stdout  taplo.toml  taplo.with_token.stderr  taplo.with_token.stdout  taplo.without_token.stderr  (+15 more)
