[package]
name = "cargo-unmaintained"
version = "1.9.0"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Find unmaintained packages in Rust projects"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/cargo-unmaintained"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cargo_metadata = "0.23"
chrono = "0.4"
clap = { version = "4.5", features = ["cargo", "derive", "wrap_help"] }
crates-index = { version = "3.11", features = ["git-https-reqwest"] }
crates_io_api = "0.12.0"
curl = "0.4"
elaborate = "0.2"
env_logger = "0.11"
home = "0.5"
log = "0.4"
regex = "1.12"
remain = "0.2"
serde = "1.0"
serde_json = "1.0"
sha1_smol = { version = "1.0", features = ["std"] }
tempfile = "3.23"
termcolor = "1.4"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.1"
ctor = "0.6"
octocrab = "0.48"
predicates = "3.1"
rustsec = "0.31"
similar-asserts = "1.7"
snapbox = "0.6"
strum = "0.27"
strum_macros = "0.27"
testing = { path = "testing" }
tokio = "1.48"

[build-dependencies]
elaborate = "0.2"

[features]
default = ["on-disk-cache", "lock-index"]
on-disk-cache = []
lock-index = ["libc", "windows-sys"]
__mock_github = []
__real_github = []

# smoelius: Old feature that was renamed.
cache-repositories = ["on-disk-cache"]

# smoelius: Old feature that is no longer used.
ei = []

[lints]
workspace = true

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }
xdg = { version = "3.0" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
], optional = true }

[workspace]
# smoelius: `mock_github` must not be a workspace member. If it were, it would enable the
# `__mock_github` feature for all workspace members.
exclude = ["fixtures", "mock_github"]
members = ["ci", "ei", "testing"]

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))", "cfg(__warnings)"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
format-collect = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"

# smoelius: Enabling `__mock_github` causes `xdg` to appear unused.
[workspace.metadata.cargo-udeps.ignore]
normal = ["xdg"]

[[workspace.metadata.dylint.libraries]]
git = "https://github.com/trailofbits/dylint"
pattern = [
    "examples/general",
    "examples/supplementary",
    "examples/restriction/inconsistent_qualification",
    "examples/restriction/misleading_variable_name",
    "examples/restriction/suboptimal_pattern",
    "examples/restriction/try_io_result",
]

[workspace.metadata.unmaintained]
ignore = [
    "foreign-types",
    # smoelius: Removed by: https://github.com/GitoxideLabs/gitoxide/pull/2220
    "gix-packetline-blocking",
    "libredox",
    "rand_core",
    "redox_syscall",
    "smol_str",
    # https://github.com/toml-rs/toml/blob/5a029b03dda8fa4d58e1c9a76af4d44eeaa68cc1/crates/toml_writer/CHANGELOG.md?plain=1#L12
    "toml_write",
    # https://github.com/alacritty/vte/pull/122#issuecomment-2579278540
    "utf8parse",
    # https://github.com/wasm-bindgen/wasm-bindgen/blob/8f2792238edbe808ba9e1eecc1c44032f28a66b1/CHANGELOG.md?plain=1#L13
    "wasm-bindgen-backend",
]
