[package]
name = "cargo-unmaintained"
version = "1.9.1"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Find unmaintained packages in Rust projects"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/cargo-unmaintained"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cargo_metadata = "0.23"
chrono = "0.4"
clap = { version = "4.5", features = ["cargo", "derive", "wrap_help"] }
crates_io_api = "0.12.0"
curl = "0.4"
elaborate = "0.2"
env_logger = "0.11"
log = "0.4"
regex = "1.12"
remain = "0.2"
reqwest = { version = "0.13", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
sha1_smol = { version = "1.0", features = ["std"] }
tame-index = { version = "0.26", features = ["sparse"] }
tempfile = "3.24"
termcolor = "1.4"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.1"
ctor = "0.6"
octocrab = "0.49"
predicates = "3.1"
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
] }
rustsec = "0.31"
similar-asserts = "1.7"
snapbox = "0.6"
strum = "0.27"
strum_macros = "0.27"
testing = { path = "testing" }
tokio = "1.49"

[build-dependencies]
elaborate = "0.2"

[features]
default = ["on-disk-cache"]
on-disk-cache = []
__mock_github = []
__real_github = []

# smoelius: Old feature that was renamed.
cache-repositories = ["on-disk-cache"]

# smoelius: Old features that are no longer used.
ei = []
lock-index = []

[lints]
workspace = true

[target.'cfg(unix)'.dependencies]
xdg = { version = "3.0" }

[workspace]
# smoelius: `mock_github` must not be a workspace member. If it were, it would enable the
# `__mock_github` feature for all workspace members.
exclude = ["fixtures", "mock_github"]
members = ["ci", "ei", "testing"]

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))", "cfg(__warnings)"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
format-collect = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"

# smoelius: Enabling `__mock_github` causes `xdg` to appear unused.
[workspace.metadata.cargo-udeps.ignore]
normal = ["reqwest", "xdg"]

[[workspace.metadata.dylint.libraries]]
git = "https://github.com/trailofbits/dylint"
pattern = [
    "examples/general",
    "examples/supplementary",
    "examples/restriction/inconsistent_qualification",
    "examples/restriction/misleading_variable_name",
    "examples/restriction/suboptimal_pattern",
    "examples/restriction/try_io_result",
]

[workspace.metadata.unmaintained]
ignore = [
    "cexpr",
    "foreign-types",
    # smoelius: Removed by: https://github.com/GitoxideLabs/gitoxide/pull/2220
    "gix-packetline-blocking",
    "libredox",
    "rand_core",
    "redox_syscall",
    "simple_asn1",
    "smol_str",
    "subtle",
    # https://github.com/alacritty/vte/pull/122#issuecomment-2579278540
    "utf8parse",
    "web-time",
]
