[package]
name = "cargo-unmaintained"
version = "1.11.0"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Find unmaintained packages in Rust projects"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/cargo-unmaintained"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cargo_metadata = "0.23"
chrono = "0.4"
clap = { version = "4.6", features = ["cargo", "derive", "wrap_help"] }
crates-index = { version = "3.13", features = [
    "git-https-reqwest",
], optional = true }
crates_io_api = "0.12.0"
curl = "0.4"
elaborate = "0.2"
env_logger = "0.11"
home = { version = "0.5", optional = true }
log = "0.4"
regex = "1.12"
remain = "0.2"
serde = "1.0"
serde_json = "1.0"
sha1_smol = { version = "1.0", features = ["std"] }
tame-index = { version = "0.26", features = ["sparse"], optional = true }
tempfile = "3.27"
termcolor = "1.4"
toml = "1.1"

# smoelius: Ensure `reqwest` 0.13 has TLS enabled. `reqwest`'s default features would enable TLS.
# However, `crates-index` uses `reqwest` via `gix` via `gix-transport`. And, as of this writing,
# `gix-transport` uses `reqwest` without default features.
reqwest = { version = "0.13", default-features = false, features = [
    "default-tls",
] }

[dev-dependencies]
assert_cmd = "2.2"
ctor = "1.0"
octocrab = "0.49"
predicates = "3.1"
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
] }
rustsec = "0.32"
similar-asserts = "2.0"
snapbox = "1.2"
strum = "0.28"
strum_macros = "0.28"
testing = { path = "testing" }
tokio = "1.52"

[build-dependencies]
elaborate = "0.2"

[features]
default = ["on-disk-cache", "crates-index"]
on-disk-cache = []
crates-index = ["dep:crates-index", "dep:home", "libc", "windows-sys"]
tame-index = ["dep:tame-index", "reqwest/blocking"]
__mock_github = []
__real_github = []

# smoelius: Old features that were renamed.
cache-repositories = ["on-disk-cache"]
lock-index = ["crates-index"]

# smoelius: Old feature that is no longer used.
ei = []

[lints]
workspace = true

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }
xdg = { version = "3.0" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
], optional = true }

[workspace]
# smoelius: `mock_github` must not be a workspace member. If it were, it would enable the
# `__mock_github` feature for all workspace members.
exclude = ["fixtures", "mock_github"]
members = ["ci", "ei", "testing"]

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))", "cfg(__warnings)"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
format-collect = "allow"
format-push-string = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"

# smoelius: Enabling `__mock_github` causes `xdg` to appear unused.
[workspace.metadata.cargo-udeps.ignore]
normal = ["crates-index", "home", "reqwest", "xdg"]

[[workspace.metadata.dylint.libraries]]
git = "https://github.com/trailofbits/dylint"
pattern = [
    "examples/general",
    "examples/supplementary",
    "examples/restriction/inconsistent_qualification",
    "examples/restriction/misleading_variable_name",
    "examples/restriction/suboptimal_pattern",
    "examples/restriction/try_io_result",
]

[workspace.metadata.unmaintained]
ignore = [
    "ctor-proc-macro",
    "dtor-proc-macro",
    "ff",
    "foreign-types",
    "group",
    "lazy_static",
    "libredox",
    "rand_chacha",
    "rand_core",
    "redox_syscall",
    "simple_asn1",
    "smol_str",
    "subtle",
    # https://github.com/alacritty/vte/pull/122#issuecomment-2579278540
    "utf8parse",
    "web-time",
]
