[package]
name = "ci"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
assert_cmd = "2.1"
ctor = "0.6"
elaborate = "0.2"
regex = "1.12"
serde_json = "1.0"
similar-asserts = "1.7"
tempfile = "3.23"
toml_edit = "0.24"
walkdir = "2.5"

testing = { path = "../testing" }

[lints]
workspace = true
