[package]
name = "ci"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.23"
elaborate = "1.0"

[dev-dependencies]
assert_cmd = "2.2"
elaborate = "1.0"
regex = "1.12"
serde_json = "1.0"
similar-asserts = "2.0"
tempfile = "3.27"
toml_edit = "0.25"
walkdir = "2.5"

testing = { path = "../testing" }

[lints]
workspace = true
