[package]
name = "ei"          # ei = "externally influenced"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
assert_cmd = "2.0"
ctor = "0.2"
once_cell = "1.19"
predicates = "3.1"
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
similar-asserts = "1.6"
snapbox = "0.6"
tempfile = "3.12"
toml = "0.8"

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))", "cfg(__warnings)"]
