[package]
name = "rustsec_util"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cargo_metadata = "0.18"
log = "0.4"
octocrab = "0.32"
once_cell = "1.19"
regex = "1.10"
rustsec = "0.28"
strum = "0.25"
strum_macros = "0.25"
tempfile = "3.8"
tokio = "1.34"

[workspace]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/general" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/supplementary" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/inconsistent_qualification" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/suboptimal_pattern" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/try_io_result" },
]
