[package]
name = "rustsec_util"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cargo_metadata = "0.19"
chrono = "0.4"
log = "0.4"
octocrab = "0.42"
once_cell = "1.20"
regex = "1.11"
rustsec = "0.30"
strum = "0.26"
strum_macros = "0.26"
tempfile = "3.14"
tokio = "1.41"

[target.'cfg(unix)'.dependencies]
xdg = { version = "2.5" }

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))", "cfg(__warnings)"]

# smoelius: Putting this package in the same workspace as `cargo-unmaintained` produces the
# following error:
#
#   error[E0428]: the name `Impl` is defined multiple times
#      --> .../gix-transport-0.38.0/src/client/blocking_io/http/mod.rs:193:1
#       |
#   190 | pub type Impl = curl::Curl;
#       | --------------------------- previous definition of the type `Impl` here
#   ...
#   193 | pub type Impl = reqwest::Remote;
#       | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Impl` redefined here
#       |
#       = note: `Impl` must be defined only once in the type namespace of this module
#   
#   error: Cannot set both 'http-client-reqwest' and 'http-client-curl' features as they are mutually exclusive
#     --> .../gix-transport-0.38.0/src/client/blocking_io/http/mod.rs:26:1
#      |
#   26 | compile_error!("Cannot set both 'http-client-reqwest' and 'http-client-curl' features as they are mutually exclusive");
#      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
#
# smoelius: I no longer observe the above error.
